1.6.0
=====

(Kim Shepherd)
 - [DS-156] File description not available in XMLUI
 - [DS-118] File preview link during submission leads to page not found

(Claudia Juergen)
 - [DS-188] Misspell exclude.type=indentifier in dstat.cfg

(Ricardo Saraiva)
 - [DS-190] Portuguese (pt_PT) translation Messages.properties JSP-UI v1.5.2

(Stuart Lewis)
 - [DS-194] Give METS ingester configuration option to make use of collection templates
 - [DS-195] Allow the primary bitstream to be set in the item importer / exporter
 - [DS-196] METS exposed via OAI-PMH includes description.provenance information
 - [DS-200] SWORD module requires the X-Packaging header
 - [DS-212] NPE thrown during Harvest of non-items when visibility restriction is enabled
 - [DS-221] XMLUI 'current activity' recognises Google Chrome as Safari

(Larry Stone)
 - [DS-193] OAI RDF crosswalk fails when DC value is null

(Mark Diggory / Stuart Lewis)
 - [DS-201] handle.jar upgraded to version 6.2

(Andrea Bollini)
- [DS-206] Input form visibility restriction doesn't work properly
- [DS-199] SWORD module doesn't accept X-No-Op header (dry run)
- [DS-223] Submission process show previous button in JSPUI also if the step is the first "visible" step
- [DS-227] Values with double apos doesn't work in dropdown and list input type

(Tim Donohue)
- [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI

(Ben Bosman)
- [DS-226] confirmation page of edit profile has an invalid link


1.5.2 final
===========

(Graham Triggs)
 - Fixes for critical bugs identified by Findbugs

(Mark Diggory)
 - [DS-100] XMLUI OpenURL support contributed by the National Evolutionary Synthesis Center (NESCent) and @mire.
 - [DS-93]  Upgrade XMLUI to Cocoon 2.2
 - [DS-117] File uploads >=100KB lead to an error in the xmlui
 - [DS-154] Make a backup of the config dir on Ant update
 - [DS-155] Maven war plugin changes cause war to include libraries as well