@@ -1048,7 +1048,7 @@ http://hdl.handle.net/1721.123/4567
     </section>
     <section remap="h2">
       <title><anchor id="docbook-business.html-search" xreflabel="Search"/>Search</title>
-      <para>DSpace&apos;s search code is a simple API which currently wraps the Lucene search engine. The first half of the search task is indexing, and <literal>org.dspace.search.DSIndexer</literal> is the indexing class, which contains <literal>indexContent()</literal> which if passed an <literal>Item</literal>, <literal>Community</literal>, or <literal>Collection</literal>, will add that content&apos;s fields to the index. The methods <literal>unIndexContent()</literal> and <literal>reIndexContent()</literal> remove and update content&apos;s index information. The <literal>DSIndexer</literal> class also has a <literal>main()</literal> method which will rebuild the index completely. This is invoked by the <literal>dspace/bin/index-all</literal> script. The intent was for the <literal>main()</literal> method to be invoked on a regular basis to avoid index corruption, but we have had no problem with that so far.</para>
+      <para>DSpace&apos;s search code is a simple API which currently wraps the Lucene search engine. The first half of the search task is indexing, and <literal>org.dspace.search.DSIndexer</literal> is the indexing class, which contains <literal>indexContent()</literal> which if passed an <literal>Item</literal>, <literal>Community</literal>, or <literal>Collection</literal>, will add that content&apos;s fields to the index. The methods <literal>unIndexContent()</literal> and <literal>reIndexContent()</literal> remove and update content&apos;s index information. The <literal>DSIndexer</literal> class also has a <literal>main()</literal> method which will rebuild the index completely. This can be invoked by the <literal>dspace/bin/index-init</literal> (complete rebuild) or <literal>dspace/bin/index-update</literal> (update) script. The intent was for the <literal>main()</literal> method to be invoked on a regular basis to avoid index corruption, but we have had no problem with that so far.</para>
       <para>Which fields are indexed by <literal>DSIndexer</literal>? These fields are defined in dspace.cfg in the section &quot;Fields to index for search&quot; as name-value-pairs. The name must be unique in the form search.index.i (i is an arbitrary positive number). The value on the right side has a unique value again, which can be referenced in search-form (e.g. title, author). Then comes the metadata element which is indexed. &apos;*&apos; is a wildcard which includes all subelements. For example:</para>
       <para>
         <literal>search.index.4 = keyword:dc.subject.*</literal>
@@ -1306,7 +1306,7 @@ FOCUS&gt;  The Really Exciting Research Video
       <section remap="h3">
         <title>Index Maintenance</title>
         <para>The browse API contains calls to add and remove items from the index, and to regenerate the indices from scratch. In general the content management API invokes the necessary browse API calls to keep the browse indices in sync with what is in the archive, so most applications will not need to invoke those methods.</para>
-        <para>If the browse index becomes inconsistent for some reason, the <literal>InitializeBrowse</literal> class is a command line tool (generally invoked using the <literal>/dspace/bin/index-all</literal> shell script) that causes the indices to be regenerated from scratch.</para>
+        <para>If the browse index becomes inconsistent for some reason, the <literal>InitializeBrowse</literal> class is a command line tool (generally invoked using the <literal>/dspace/bin/index-init</literal> shell script) that causes the indices to be regenerated from scratch.</para>
       </section>
       <section remap="h3">
         <title>Caveats</title>
